2005-03-16  Derek Price  <derek@ximbiot.com>

	* server.c (create_adm_p, serve_entry), tag.c (rtag_proc): Avoid memory
	leaks.
	(Thanks to report from Alen Zukich <alen.zukich@klocwork.com>.)

2005-03-16  Derek Price  <derek@ximbiot.com>

	* logmsg.c (do_verify): Don't check for NULL return from xfopen().

2005-03-16  Derek Price  <derek@ximbiot.com>

	* sanity.sh (debug-log-nonfatal): New test.

2005-03-16  Derek Price  <derek@ximbiot.com>

	* sanity.sh (writeproxy-ssh-noredirect): Don't unconditionally create
	a primary debug log.

2005-03-16  Derek Price  <derek@ximbiot.com>

	* cvs.h (open_file): Move proto...
	* subr.h (xfopen): ...here and rename.
	* filesubr.c (open_file): Move function...
	* subr.c (xfopen): ...here, with additional commenting and minor
	cosmetic changes.
	* add.c, checkout.c, client.c, cvsrc.c, edit.c, entries.c, filesubr.c,
	logmsg.c, mkmodules.c, modules,c, patch.c, root.c, subr.c:
	s/open_file/xfopen/.

2005-03-16  Derek Price  <derek@ximbiot.com>

	* log-buffer.c (setup_logfiles): Failure to open a debug log file
	should be non-fatal.

2005-03-16  Derek Price  <derek@ximbiot.com>

	* server.c (cvs_outerr): Quote error text in syslog messages.

2005-03-15  Mark D. Baushke  <mdb@cvshome.org>

	* history.c (select_hrec): Avoid possible memory leak.

2005-03-15  Derek Price  <derek@ximbiot.com>

	* patch.c (patch_proc): Avoid memory leak.
	(Thanks to report from Alen Zukich <alen.zukich@klocwork.com>.)

2005-03-12  Mark D. Baushke  <mdb@cvshome.org>

	* server.c (receive_partial_file): Use ssize_t to deal with < 0
	return value from write().

2005-03-12  Mark D. Baushke  <mdb@cvshome.org>

	* history.c (save_file): Bug fix from last change.

2005-03-11  Mark D. Baushke  <mdb@cvshome.org>

	* update.c (get_linkinfo_proc): Use Xasprintf instead of
	xmalloc/sprintf.  Gratuitous reformatting.
	(update_ignproc, update_dirent_proc, checkout_file): Ditto.
	(patch_file, merge_file, join_file): Ditto.
	* modules.c (open_module): Ditto.
